--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# SPDX-License-Identifier: MIT-0
+
 .DS_Store
 node_modules
 .vscode
