updating package.json eslint to ignore unused variables rule

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+      "rules": {
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
